# 1mcp.in

./: .gitignore  AGENTS.md  CONTRIBUTING_MCP.md  GETTING_STARTED.md  LICENSE  README.md  ROADMAP.md  SETUP_RAILWAY.md  e2e-report.md  mach1-dev-config.json  opencode.json  plan.md  railway.toml
.github/workflows/: ci.yml  release.yml
client_docs/antigravity/: instructions.prompt.md  mcp.config.json  ~.geminiantigravitymcp_config.json.txt
client_docs/codex/: instructions.prompt.md  mcp.config.toml  ~.codexconfig.toml.txt
client_docs/cursor/: instructions.prompt.md  mcp.config.json  ~.cursorrules.txt
client_docs/opencode/: instructions.prompt.md  mcp.config.json  ~.configopencodeAGENTS.md.txt
client_docs/vscode/: .copilotcopilot-instructions.md.txt  instructions.prompt.md  mcp.config.json
client_docs/windsurf/: instructions.prompt.md  mcp.config.json  ~.codeiumwindsurfmcp_config.json.txt
homebrew-tap/Formula/: 1mcp.rb
scripts/: build.ps1  build.sh  e2e-stub.ps1  install.ps1  install.sh  uninstall-quick.ps1  uninstall.ps1  verify-uninstall.ps1
services/central-mcp/: Dockerfile.api  README.md  go.mod  go.sum
services/central-mcp/cmd/centralmcpd/: main.go
services/mach1/: Dockerfile.api  README.md  config.example.json  go.mod  go.sum
services/web-ui/: .env.example  .env.local.example  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
services/web-ui/e2e/: fixtures.ts
services/web-ui/scripts/: prepare-router.mjs
services/web-ui/src/: app.css  app.html
services/web-ui/src-tauri/: Cargo.toml  tauri.conf.json
services/web-ui/src-tauri/icons/: icon.icns
services/web-ui/src-tauri/src/: daemon.rs  db.rs  lib.rs  main.rs
(+147 files in other folders)
