[package]
name = "mach1"
version = "0.4.3"
edition = "2021"
description = "1mcp.in - Cross-platform MCP management hub"

[lib]
name = "mach1_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
rand = "0.8"
sysinfo = "0.30"
